@@ -265,6 +265,41 @@ SEXP dupLenMatrixR(SEXP x) {
  */
 
 SEXP dupLenVecR(SEXP x) {
+  if (isFactor(x)) {
+    const int len = LENGTH(PROTECT(getAttrib(x, R_LevelsSymbol)));
+    UNPROTECT(1);
+    bool *restrict count = (bool*)calloc(len,sizeof(bool));
+    const int *restrict px = INTEGER(x);
+    const int xlen = LENGTH(x);
+    int j = 0;
+    for (int i = 0; i < xlen; ++i) {
+      if (!count[px[i]]) {
+        j++;
+        if (j == len)
+          break;
+        count[px[i]] = true;
+      }
+    }
+    free(count);
+    return ScalarInteger(j);
+  }
+  if (isLogical(x)) {
+    bool *restrict count = (bool*)calloc(3,sizeof(bool));
+    const int *restrict px = LOGICAL(x);
+    const int xlen = LENGTH(x);
+    int j = 0;
+    for (int i = 0; i < xlen; ++i) {
+      const int cs = px[i] == NA_LOGICAL ? 2 : px[i];
+      if (!count[cs]) {
+        j++;
+        if (j == 3)
+          break;
+        count[cs] = true;
+      }
+    }
+    free(count);
+    return ScalarInteger(j);
+  }
   const R_xlen_t n = xlength(x);
   const SEXPTYPE tx = UTYPEOF(x);
   int K;
@@ -280,33 +315,13 @@ SEXP dupLenVecR(SEXP x) {
       M *= 2;
       K++;
     }
-  } else if (tx == LGLSXP) {
-    M = 4;
-    K = 2;
   } else {
     error("Type %s is not supported.", type2char(tx)); // # nocov
   }
   R_xlen_t count = 0;
   int *h = (int*)calloc(M, sizeof(int));
   switch (tx) {
-  case LGLSXP: {
-    const int *restrict px = LOGICAL(x);
-    size_t id = 0;
-    for (int i = 0; i < n; ++i) {
-      id = (px[i] == NA_LOGICAL) ? 2U : (size_t) px[i];
-      while (h[id]) {
-        if (px[h[id]-1]==px[i]) {
-          goto lbl;
-        }
-        id++; id %= M; // # nocov
-      }
-      h[id] = (int) i + 1;
-      count++;
-      lbl:;
-    }
-    free(h);
-  } break;
-  case INTSXP: { // think about factor and levels number
+  case INTSXP: {
     const int *restrict px = INTEGER(x);
     size_t id = 0;
     for (int i = 0; i < n; ++i) {
